tests/build/impl_ui_node_macro/fail/attr_in_item_not_impl.rs
use zero_ui::core::impl_ui_node;

#[impl_ui_node(none)]
struct Foo {}

fn main() {
    let _ = Foo {};
}
